Cycles SeparateRGBNode Red socket defined wrong #50100

Closed
opened 2016-11-23 11:21:35 +01:00 by David · 5 comments

Found this error in \blender\intern\cycles\render\nodes.cpp

NODE_DEFINE(SeparateRGBNode)
{
	NodeType* type = NodeType::add("separate_rgb", create, NodeType::SHADER);

	SOCKET_IN_COLOR(color, "Image", make_float3(0.0f, 0.0f, 0.0f));

	SOCKET_OUT_FLOAT(g, "R");
	SOCKET_OUT_FLOAT(g, "G");
	SOCKET_OUT_FLOAT(b, "B");

	return type;
}

obviously code should be:

	SOCKET_OUT_FLOAT(r, "R");

Found this error in \blender\intern\cycles\render\nodes.cpp ``` NODE_DEFINE(SeparateRGBNode) { NodeType* type = NodeType::add("separate_rgb", create, NodeType::SHADER); SOCKET_IN_COLOR(color, "Image", make_float3(0.0f, 0.0f, 0.0f)); SOCKET_OUT_FLOAT(g, "R"); SOCKET_OUT_FLOAT(g, "G"); SOCKET_OUT_FLOAT(b, "B"); return type; } ``` obviously code should be: ``` SOCKET_OUT_FLOAT(r, "R"); ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bocs

Added subscriber: @bocs

This issue was referenced by blender/cycles@fd5fb436aa

This issue was referenced by blender/cycles@fd5fb436aa0cabccb9a0fc642dfac12e59d1b411

This issue was referenced by def365e252

This issue was referenced by def365e252524915f1c02bc7172e0113c21f5ada

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50100
No description provided.