Fix T50100: Cycles SeparateRGBNode Red socket defined wrong

Spotted by David (bocs), thanks!